plugins/binding/csharp/source/TellusimCSBase.cs

		
		public BoundCircled(in Vector2d center, double radius) { this.center = center; this.radius = radius; }
		public BoundCircled(in BoundCircled c) { center = c.center; radius = c.radius; }
		public BoundCircled(in BoundCirclef c) { BoundCircled ret = new BoundCircled(); tsBoundCircled_set_bcf(ref ret, in c); center = ret.center; radius = ret.radius; }
		public BoundCircled(in BoundRectd r) { BoundCircled ret = new BoundCircled(); tsBoundCircled_set_br(ref ret, in r); center = ret.center; radius = ret.radius; }
		
		public void expand(in Vector2d v) { tsBoundCircled_expand1(ref this, in v); }
		public void expand(in BoundCircled c) { tsBoundCircled_expand(ref this, in c); }
		
		public void expandRadius(in Vector2d v) { tsBoundCircled_expandRadius1(ref this, in v); }
		public void expandRadius(in BoundCircled c) { tsBoundCircled_expandRadius(ref this, in c); }
		
		public bool inside(in Vector2d v) { return tsBoundCircled_inside1(in this, in v); }
		public bool inside(in BoundCircled c) { return tsBoundCircled_inside(in this, in c); }
		
		public double distance(in Vector2d v) { return tsBoundCircled_distance(in this, in v); }
		
		public static BoundCircled operator*(in Matrix4x3d m, in BoundCircled r) { BoundCircled ret = new BoundCircled(); tsMatrix4x3d_mul_bc(ref ret, in m, in r); return ret; }
		public static BoundCircled operator*(in Matrix4x4d m, in BoundCircled r) { BoundCircled ret = new BoundCircled(); tsMatrix4x4d_mul_bc(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", center, radius); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_set_bcf(ref BoundCircled ret, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_set_br(ref BoundCircled ret, in BoundRectd r);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_expand1(ref BoundCircled ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_expand(ref BoundCircled ret, in BoundCircled c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_expandRadius1(ref BoundCircled ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCircled_expandRadius(ref BoundCircled ret, in BoundCircled c);
		[DllImport(Base.Import)] private static extern bool tsBoundCircled_inside1(in BoundCircled bc, in Vector2d v);
		[DllImport(Base.Import)] private static extern bool tsBoundCircled_inside(in BoundCircled bc, in BoundCircled c);
		[DllImport(Base.Import)] private static extern float tsBoundCircled_distance(in BoundCircled bc, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3d_mul_bc(ref BoundCircled ret, in Matrix4x3d m, in BoundCircled c);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4d_mul_bc(ref BoundCircled ret, in Matrix4x4d m, in BoundCircled c);
		
		public Vector2d center;
		public double radius;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundBoxf {
		
		public BoundBoxf(in Vector3f min, in Vector3f max) { this.min = min; this.max = max; }
		public BoundBoxf(in BoundBoxf b) { min = b.min; max = b.max; }
		public BoundBoxf(in BoundBoxd b) { BoundBoxf ret = new BoundBoxf(); tsBoundBoxf_set_bbd(ref ret, in b); min = ret.min; max = ret.max; }
		public BoundBoxf(in BoundSpheref s) { BoundBoxf ret = new BoundBoxf(); tsBoundBoxf_set_bs(ref ret, in s); min = ret.min; max = ret.max; }
		
		public void expand(in Vector3f v) { tsBoundBoxf_expand1(ref this, in v); }
		public void expand(in BoundBoxf b) { tsBoundBoxf_expand(ref this, in b); }
		
		public bool inside(in Vector3f v) { return tsBoundBoxf_inside1(in this, in v); }
		public bool inside(in BoundBoxf b) { return tsBoundBoxf_inside(in this, in b); }
		
		public double distance(in Vector3f v) { return tsBoundBoxf_distance(in this, in v); }
		
		public static BoundBoxf operator*(in Matrix4x3f m, in BoundBoxf r) { BoundBoxf ret = new BoundBoxf(); tsMatrix4x3f_mul_bb(ref ret, in m, in r); return ret; }
		public static BoundBoxf operator*(in Matrix4x4f m, in BoundBoxf r) { BoundBoxf ret = new BoundBoxf(); tsMatrix4x4f_mul_bb(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", min, max); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxf_set_bbd(ref BoundBoxf ret, in BoundBoxd b);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxf_set_bs(ref BoundBoxf ret, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxf_expand1(ref BoundBoxf ret, in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxf_expand(ref BoundBoxf ret, in BoundBoxf b);
		[DllImport(Base.Import)] private static extern bool tsBoundBoxf_inside1(in BoundBoxf br, in Vector3f v);
		[DllImport(Base.Import)] private static extern bool tsBoundBoxf_inside(in BoundBoxf br, in BoundBoxf b);
		[DllImport(Base.Import)] private static extern float tsBoundBoxf_distance(in BoundBoxf br, in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3f_mul_bb(ref BoundBoxf ret, in Matrix4x3f m, in BoundBoxf b);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4f_mul_bb(ref BoundBoxf ret, in Matrix4x4f m, in BoundBoxf b);
		
		public Vector3f min;
		public Vector3f max;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundBoxd {
		
		public BoundBoxd(in Vector3d min, in Vector3d max) { this.min = min; this.max = max; }
		public BoundBoxd(in BoundBoxd b) { min = b.min; max = b.max; }
		public BoundBoxd(in BoundBoxf b) { BoundBoxd ret = new BoundBoxd(); tsBoundBoxd_set_bbf(ref ret, in b); min = ret.min; max = ret.max; }
		public BoundBoxd(in BoundSphered s) { BoundBoxd ret = new BoundBoxd(); tsBoundBoxd_set_bs(ref ret, in s); min = ret.min; max = ret.max; }
		
		public void expand(in Vector3d v) { tsBoundBoxd_expand1(ref this, in v); }
		public void expand(in BoundBoxd b) { tsBoundBoxd_expand(ref this, in b); }
		
		public bool inside(in Vector3d v) { return tsBoundBoxd_inside1(in this, in v); }
		public bool inside(in BoundBoxd b) { return tsBoundBoxd_inside(in this, in b); }
		
		public double distance(in Vector3d v) { return tsBoundBoxd_distance(in this, in v); }
		
		public static BoundBoxd operator*(in Matrix4x3d m, in BoundBoxd r) { BoundBoxd ret = new BoundBoxd(); tsMatrix4x3d_mul_bb(ref ret, in m, in r); return ret; }
		public static BoundBoxd operator*(in Matrix4x4d m, in BoundBoxd r) { BoundBoxd ret = new BoundBoxd(); tsMatrix4x4d_mul_bb(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", min, max); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxd_set_bbf(ref BoundBoxd ret, in BoundBoxf b);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxd_set_bs(ref BoundBoxd ret, in BoundSphered s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxd_expand1(ref BoundBoxd ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundBoxd_expand(ref BoundBoxd ret, in BoundBoxd b);
		[DllImport(Base.Import)] private static extern bool tsBoundBoxd_inside1(in BoundBoxd br, in Vector3d v);
		[DllImport(Base.Import)] private static extern bool tsBoundBoxd_inside(in BoundBoxd br, in BoundBoxd b);
		[DllImport(Base.Import)] private static extern float tsBoundBoxd_distance(in BoundBoxd br, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3d_mul_bb(ref BoundBoxd ret, in Matrix4x3d m, in BoundBoxd b);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4d_mul_bb(ref BoundBoxd ret, in Matrix4x4d m, in BoundBoxd b);
		
		public Vector3d min;
		public Vector3d max;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundSpheref {
		
		public BoundSpheref(in Vector3f center, float radius) { this.center = center; this.radius = radius; }
		public BoundSpheref(in BoundSpheref s) { center = s.center; radius = s.radius; }
		public BoundSpheref(in BoundSphered s) { BoundSpheref ret = new BoundSpheref(); tsBoundSpheref_set_bsd(ref ret, in s); center = ret.center; radius = ret.radius; }
		public BoundSpheref(in BoundBoxf b) { BoundSpheref ret = new BoundSpheref(); tsBoundSpheref_set_bb(ref ret, in b); center = ret.center; radius = ret.radius; }
		
		public void expand(in Vector2d v) { tsBoundSpheref_expand1(ref this, in v); }
		public void expand(in BoundSpheref s) { tsBoundSpheref_expand(ref this, in s); }
		
		public void expandRadius(in Vector2d v) { tsBoundSpheref_expandRadius1(ref this, in v); }
		public void expandRadius(in BoundSpheref s) { tsBoundSpheref_expandRadius(ref this, in s); }
		
		public bool inside(in Vector2d v) { return tsBoundSpheref_inside1(in this, in v); }
		public bool inside(in BoundSpheref s) { return tsBoundSpheref_inside(in this, in s); }
		
		public float distance(in Vector2d v) { return tsBoundSpheref_distance(in this, in v); }
		
		public static BoundSpheref operator*(in Matrix4x3f m, in BoundSpheref r) { BoundSpheref ret = new BoundSpheref(); tsMatrix4x3f_mul_bs(ref ret, in m, in r); return ret; }
		public static BoundSpheref operator*(in Matrix4x4f m, in BoundSpheref r) { BoundSpheref ret = new BoundSpheref(); tsMatrix4x4f_mul_bs(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", center, radius); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_set_bsd(ref BoundSpheref ret, in BoundSphered s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_set_bb(ref BoundSpheref ret, in BoundBoxf b);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_expand1(ref BoundSpheref ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_expand(ref BoundSpheref ret, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_expandRadius1(ref BoundSpheref ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundSpheref_expandRadius(ref BoundSpheref ret, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern bool tsBoundSpheref_inside1(in BoundSpheref bs, in Vector2d v);
		[DllImport(Base.Import)] private static extern bool tsBoundSpheref_inside(in BoundSpheref bs, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern float tsBoundSpheref_distance(in BoundSpheref bs, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3f_mul_bs(ref BoundSpheref ret, in Matrix4x3f m, in BoundSpheref s);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4f_mul_bs(ref BoundSpheref ret, in Matrix4x4f m, in BoundSpheref s);
		
		public Vector3f center;
		public float radius;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundSphered {
		
		public BoundSphered(in Vector3d center, double radius) { this.center = center; this.radius = radius; }
		public BoundSphered(in BoundSphered s) { center = s.center; radius = s.radius; }
		public BoundSphered(in BoundSpheref s) { BoundSphered ret = new BoundSphered(); tsBoundSphered_set_bsf(ref ret, in s); center = ret.center; radius = ret.radius; }
		public BoundSphered(in BoundBoxd b) { BoundSphered ret = new BoundSphered(); tsBoundSphered_set_bb(ref ret, in b); center = ret.center; radius = ret.radius; }
		
		public void expand(in Vector3d v) { tsBoundSphered_expand1(ref this, in v); }
		public void expand(in BoundSphered s) { tsBoundSphered_expand(ref this, in s); }
		
		public void expandRadius(in Vector3d v) { tsBoundSphered_expandRadius1(ref this, in v); }
		public void expandRadius(in BoundSphered s) { tsBoundSphered_expandRadius(ref this, in s); }
